--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -47,7 +47,7 @@
                     of
                     Ukraine and Russia close to the site of the Chernobyl Nuclear Power Plant.
                 </div>
-                <div class="py-3">If you are looking for information on the Chernobyl accident itself please go to ‘<a href="#">Podcasts &amp; Videos</a>’ and ‘<a href="#">General Information about the Chernobyl Accident</a>’.</div>
+                <div class="py-3">If you are looking for information on the Chernobyl accident itself please go to <a href="{% url 'podcasts_and_videos' %}">Podcasts &amp; Videos</a> and <a href="{% url 'useful_links' %}">General Information about the Chernobyl Accident</a>.</div>
             </div>
             <div class="col"></div>
 
