--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,10 @@ body {
 .navbar-ctb .navbar-brand{
     height: 36px;
 }
+.page-banner{
+  text-align: center;
+  padding: 20px;
+}
 
 /*!*.navbar-ctb .navbar-toggler {*!*/
     /*!*color: rgba(0,0,0,.55);*!*/
