--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -5,7 +5,7 @@
         <div class="py-1">
             <a href="/">Site Home</a>
             &nbsp; &nbsp; | &nbsp; &nbsp;
-            <a href="mailto:support@canceridc.dev">Contact Us</a>
+            <a href="{% url 'contact' %}">Contact Us</a>
             &nbsp; &nbsp; | &nbsp; &nbsp;
             <a href="{% url 'privacy' %}" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
             &nbsp; &nbsp; | &nbsp;&nbsp;
