--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -14,7 +14,7 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center py-5">
         <div class="col-lg-4 accounts-col">
             <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
                 <div class="card">
@@ -23,7 +23,7 @@
                         <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <button class="btn btn-default" type="submit">{% trans "Reset My Password" %}</button>
+                        <button class="btn btn-primary" type="submit">{% trans "Reset My Password" %}</button>
                     </div>
                     <div class="card-footer">
                         {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
