--- a/templates/accounts/account/verification_sent.html
+++ b/templates/accounts/account/verification_sent.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center">
+    <div class="row justify-content-center py-5">
         <div class="col-lg-4">
             <div class="card panel-default">
                 <form action="{% url 'account_email' %}" class="email_list" method="post">
