--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% block extra_css_libs %}{% endblock %}
-    <!--<link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}" />-->
+    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}" />
     <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}" />
 
     {% block header %}{% endblock %}
