--- a/templates/accounts/account/password_reset_done.html
+++ b/templates/accounts/account/password_reset_done.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center">
+    <div class="row justify-content-center py-5">
         <div class="col-lg-4">
             <div class="card">
                 <div class="panel-body">
