--- a/templates/accounts/account/password_reset_from_key.html
+++ b/templates/accounts/account/password_reset_from_key.html
@@ -4,7 +4,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center">
+    <div class="row justify-content-center py-5">
         <div class="col-lg-4 accounts-col">
             <div class="card">
                 <div class="card-body">
