--- a/templates/accounts/account/password_set.html
+++ b/templates/accounts/account/password_set.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center">
+    <div class="row justify-content-center py-5">
         <div class="col-lg-4 password_set accounts-col">
             <div class="card">
                 <div class="card-body">
