--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -28,7 +28,7 @@
         <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'account_login' %}">CTB Biosample Search Facility</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'account_login' %}">CTB Biosample Search Facility</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -74,18 +74,20 @@
         </div>
     </div>
 </nav>
-{% if 'accounts' in request.path or 'bio_samp' in request.path%}
+{% if 'accounts' in request.path or 'dashboard' in request.path or 'search' in request.path or 'users' in request.path %}
     <div class="nav-scroller bg-body shadow-sm">
         <div class="container">
             <nav class="nav nav-underline navbar-ctb" aria-label="Secondary navigation">
                 <a href="{% url 'landing_page' %}" title="Home Page">
                     <img class="navbar-brand" src="{% static 'img/ctb-biosample-logo.svg' %}" alt="NIH CTB Logo"/>
                 </a>
-                <a class="nav-link" href="#">
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'dashboard' %}">
                     Dashboard
                 </a>
-                <a class="nav-link" href="#">My Saved Searches</a>
-                <a class="nav-link" href="#">CTB Publications</a>
+                <a class="nav-link" href="{% url 'search_tissue_samples' %}">Search Tissue Samples</a>
+                <a class="nav-link" href="{% url 'saved_searches' %}">My Saved Searches</a>
+                {% endif %}
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <li id="user-login" class="nav-item navbar-signin">
