code clean up base js added to templates

--- a/templates/accounts/account/password_reset_from_key.html
+++ b/templates/accounts/account/password_reset_from_key.html
@@ -4,11 +4,13 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center py-5">
+    <div class="row justify-content-center p-5">
         <div class="col-lg-4 accounts-col">
             <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h3>
+                <div class="card-header">
+                    <h4 class="card-title">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h4>
+                </div>
+                <div class="card-body p-5">
                     {% if token_fail %}
                         {% url 'account_reset_password' as passwd_reset_url %}
                         <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
@@ -17,7 +19,10 @@
                             <form method="POST" action="{{ action_url }}" class="password_reset">
                                 {% csrf_token %}
                                 {{ form.as_p }}
-                                <button class="btn btn-primary" type="submit" name="action">{% trans "Change Password" %}</button>
+                                <div class="d-grid gap-2">
+                                    <button class="btn btn-primary" type="submit"
+                                            name="action">{% trans "Change Password" %}</button>
+                                </div>
                             </form>
                         {% else %}
                             <p>{% trans 'Your password is now changed.' %}</p>
