--- a/templates/ctb/privacy.html
+++ b/templates/ctb/privacy.html
@@ -171,7 +171,7 @@
 {% block js_file %}
 	{{ block.super }}
 	<script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
-    <script>
-    var showWarning = true;
-    </script>
+{#    <script>#}
+{#    var showWarning = true;#}
+{#    </script>#}
 {% endblock %}
