--- a/templates/ctb/user_detail.html
+++ b/templates/ctb/user_detail.html
@@ -30,21 +30,27 @@
 
 {% block content %}
     <div class="container my-5">
-{#        <div class="row user-row justify-content-center mb-5 mt-5">#}
-{#            <div class="col text-center">#}
-{#                <i class="fa-solid fa-user space-top-10 basic-avatar" alt="User Avatar"/> </i>#}
-{#                <h4>Welcome {% if not unconnected_local_account %}{{ user_details.first_name }}#}
-{#                    {{ user_details.last_name }}{% else %}{{ user_details.email }}{% endif %}!</h4>#}
-{#            </div>#}
-{#        </div>#}
+        {#        <div class="row user-row justify-content-center mb-5 mt-5">#}
+        {#            <div class="col text-center">#}
+        {#                <i class="fa-solid fa-user space-top-10 basic-avatar" alt="User Avatar"/> </i>#}
+        {#                <h4>Welcome {% if not unconnected_local_account %}{{ user_details.first_name }}#}
+        {#                    {{ user_details.last_name }}{% else %}{{ user_details.email }}{% endif %}!</h4>#}
+        {#            </div>#}
+        {#        </div>#}
         <div class="row user-row justify-content-center">
             <div class="col-md-8">
                 <div class="card user-panel">
-                    <div class="card-header">Personal Details
-                        <button class="btn-primary btn btn-sm float-end"><i class="fa-solid fa-pen-to-square"></i> Edit</button>
-                    </div>
-                    <div class="card-body">
+                    <div class="card-header">
+                        <h4><i class="fa-solid fa-user me-2"></i> Personal Details
 
+                        </h4>
+                    </div>
+                    <div class="card-body px-5 py-3">
+                        <div class="text-end">
+                            <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen-to-square"></i>
+                                Edit Personal Details
+                            </button>
+                        </div>
                         <table class="user-info" role="presentation">
                             {% if not unconnected_local_account %}
                                 <tr>
@@ -85,59 +91,53 @@
                                 <td>Last Department</td>
                                 <td>{{ user_details.last_department }}</td>
                             </tr>
+
                             <tr>
                                 <td>Last Login</td>
                                 <td id="last_login">{{ user_details.last_login }}</td>
                             </tr>
                         </table>
-                    </div>
-                </div>
-                <div class="card mt-2">
-                    <div class="card-header">Password
-                        <button class="btn-primary btn btn-sm float-end"><i class="fa-solid fa-key"></i> Change Password
-                        </button>
-                    </div>
-                    <div class="card-body">
-                        <table>
-                            <tr>
-                                <td>Last Modified:</td>
-                                <td>{{ user_details.pwd_last_modified }}</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
 
+                        <hr>
+                        <div>Password Last Modified
+                            <a href="{% url 'account_change_password' %}" class="btn btn-outline-secondary btn-sm ms-5 float-end"><i
+                                    class="fa-solid fa-key"></i> Change
+                                Password
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-{#            <div class="col">#}
-{#                <div class="card gcp-panel">#}
-{#                    <div class="card-body">#}
-{#                        <h5 class="card-title">#}
-{#                            Google Cloud Platform#}
-{#                        </h5>#}
-{#                        <p>#}
-{#                            Apply for "cloud credits" and your own Google Cloud project by submitting a request <a#}
-{#                                href="https://learn.canceridc.dev/introduction/requesting-gcp-cloud-credits"#}
-{#                                target="_blank" rel="noopener noreferrer">here</a>.#}
-{#                        </p>#}
-{#                        <p>Go to the <a href="http://console.cloud.google.com" target="_blank"#}
-{#                                        rel="noopener noreferrer">Google Cloud Console</a>.</p>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col">#}
-{#                <div class="card account-management-panel">#}
-{#                    <div class="card-body">#}
-{#                        <h5 class="card-title">#}
-{#                            Account Management#}
-{#                        </h5>#}
-{#                        <p>#}
-{#                            <a href="#logout-modal" data-toggle="modal" data-target="#logout-modal" title="Sign Out">Sign#}
-{#                                Out <i class="fa-solid fa-sign-out"></i></a>#}
-{#                        </p>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
+            {#            <div class="col">#}
+            {#                <div class="card gcp-panel">#}
+            {#                    <div class="card-body">#}
+            {#                        <h5 class="card-title">#}
+            {#                            Google Cloud Platform#}
+            {#                        </h5>#}
+            {#                        <p>#}
+            {#                            Apply for "cloud credits" and your own Google Cloud project by submitting a request <a#}
+            {#                                href="https://learn.canceridc.dev/introduction/requesting-gcp-cloud-credits"#}
+            {#                                target="_blank" rel="noopener noreferrer">here</a>.#}
+            {#                        </p>#}
+            {#                        <p>Go to the <a href="http://console.cloud.google.com" target="_blank"#}
+            {#                                        rel="noopener noreferrer">Google Cloud Console</a>.</p>#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#            </div>#}
+            {#            <div class="col">#}
+            {#                <div class="card account-management-panel">#}
+            {#                    <div class="card-body">#}
+            {#                        <h5 class="card-title">#}
+            {#                            Account Management#}
+            {#                        </h5>#}
+            {#                        <p>#}
+            {#                            <a href="#logout-modal" data-toggle="modal" data-target="#logout-modal" title="Sign Out">Sign#}
+            {#                                Out <i class="fa-solid fa-sign-out"></i></a>#}
+            {#                        </p>#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#            </div>#}
         </div>
     </div>
 
