--- a/templates/accounts/account/password_change.html
+++ b/templates/accounts/account/password_change.html
@@ -7,22 +7,21 @@
 {% block page_name %}password-change{% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="col-lg-4 col-md-4 col-sm-3 col-xs-2"></div>
-            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-8 accounts-col">
-                <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><h3>{% trans "Change Password" %}</h3></div>
-                        <div class="panel-body">
-                            {% csrf_token %}
-                            {{ form.as_p }}
-                            <button class="btn btn-special" type="submit" name="action">{% trans "Change Password" %}</button>
+    <div class="row justify-content-center p-5">
+        <div class="col-lg-4 accounts-col">
+            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                <div class="card">
+                    <div class="card-header"><h4>Change Password</h4></div>
+                    <div class="card-body p-5">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-primary" type="submit"
+                                    name="action">{% trans "Change Password" %}</button>
                         </div>
                     </div>
-                </form>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-3 col-xs-2"></div>
+                </div>
+            </form>
         </div>
     </div>
 {% endblock %}
