--- a/templates/accounts/account/password_reset_done.html
+++ b/templates/accounts/account/password_reset_done.html
@@ -9,13 +9,16 @@
     <div class="row justify-content-center py-5">
         <div class="col-lg-4">
             <div class="card">
-                <div class="panel-body">
-                    <h3 class="card-title">{% trans "Password Reset" %}</h3>
+{#                <div class="panel-body">#}
+                    <div class="card-header"><h4>{% trans "Password Reset" %}</h4></div>
                     {% if user.is_authenticated %}
                     {% include "account/snippets/already_logged_in.html" %}
                     {% endif %}
-                    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-                </div>
+
+                    <div class="card-body">
+                        {% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}
+                    </div>
+{#                </div>#}
             </div>
         </div>
     </div>
