--- a/templates/accounts/account/password_reset_from_key_done.html
+++ b/templates/accounts/account/password_reset_from_key_done.html
@@ -4,20 +4,16 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
-            <div class="col-lg-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3>{% trans "Change Password" %}</h3>
-                    </div>
-                    <div class="panel-body">
-                        <p>{% trans 'Your password is now changed.' %}</p>
-                    </div>
+    <div class="row justify-content-center py-5">
+        <div class="col-lg-4">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">{% trans "Change Password" %}</h4>
+                </div>
+                <div class="card-body p-3">
+                    {% trans 'Your password is now changed.' %}
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
         </div>
     </div>
 {% endblock %}
