--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -68,8 +68,5 @@
 
 {% block js_file %}
 	{{ block.super }}
-{#	<script type="text/javascript" src="{% static 'js/news.js' %}?v={{ APP_VERSION }}"></script>#}
-{#    <script>#}
-{#    var showWarning = true;#}
-{#    </script>#}
+    <script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
