--- a/templates/ctb/driver_search_facility.html
+++ b/templates/ctb/driver_search_facility.html
@@ -244,4 +244,5 @@
 
 {% block js_file %}
     {{ block.super }}
+    <script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
