--- a/templates/ctb/search_clinical.html
+++ b/templates/ctb/search_clinical.html
@@ -82,4 +82,5 @@
 
 {% block js_file %}
     {{ block.super }}
+    <script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
